<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntasActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginTop="88dp"
        android:text="@string/jugador_title"
        android:textColor="#F44336"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPregunta"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="232dp"
        android:layout_marginBottom="361dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDejarDeJugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="244dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
        app:layout_constraintVertical_bias="0.174">

        <RadioButton
            android:id="@+id/opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/opcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/opcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/opcion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviarRespuesta"
        android:layout_width="230dp"
        android:layout_height="69dp"
        android:layout_marginBottom="108dp"
        android:hint="Enviar Respuesta"
        android:text="@string/btn_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPuntos"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPregunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreJugador" />

    <Button
        android:id="@+id/btnDejarDeJugar"
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />

</androidx.constraintlayout.widget.ConstraintLayout>