<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">

    <TextView
        android:id="@+id/tituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="136dp"
        android:text="@string/resultados_title"
        android:textColor="#F44336"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/listaResultado"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listaResultado"
        android:layout_width="360dp"
        android:layout_height="256dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="367dp"
        android:layout_height="95dp"
        android:layout_marginTop="12dp"
        android:textColor="#090505"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaResultado" />

    <TextView
        android:id="@+id/respuestaCorrecta"
        android:layout_width="365dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResetearJuego"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPregunta"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/respuestaUsuario"
        android:layout_width="344dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResetearJuego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuestaCorrecta" />

    <Button
        android:id="@+id/btnResetearJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvInstruccion"
        android:layout_width="322dp"
        android:layout_height="25dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="423dp"
        android:text="@string/resultados_desc"
        app:layout_constraintBottom_toTopOf="@+id/respuestaCorrecta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloResultado"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="377dp"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/listaResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstruccion"
        app:layout_constraintVertical_bias="0.578" />

</androidx.constraintlayout.widget.ConstraintLayout>